--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "4.19.2",
+    "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "pg": "8.12.0",
     "pg-hstore": "2.3.4",
