--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "pg": "8.12.0",
     "pg-hstore": "2.3.4",
     "sequelize": "6.37.3",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "zod": "^3.23.8"
   }
 }
